# ellipsis-hackathon

./: .dockerignore  .env.sample  .eslintrc.json  .gitignore  README.md  components.json  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: fly.yml
apps/backend/: Dockerfile  tsconfig.typeorm-cli.json
apps/backend/.fly/: fly.toml
apps/backend/migrations/: 1724939200728-add-auth.ts  1724990095551-add-storefront.ts  1724994899967-add-products.ts  1725002932116-nullable-created-at.ts  1725018922698-add-payments.ts  1725064274219-add-product-category.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/config/: typeorm-cli.config.ts  typeorm.config.ts
apps/backend/src/entities/: account.entity.ts  listing.entity.ts  member.entity.ts  (+5 more)
apps/frontend/: Dockerfile  middleware.ts  next.config.js  tsconfig.json
apps/frontend/.fly/: fly.toml
apps/frontend/app/: Providers.tsx  layout.tsx  page.tsx
apps/frontend/components/: Badge.tsx  Footer.tsx  FullScreenCenter.tsx  Logo.tsx  MainHero.tsx  MainHeroImage.tsx  Nav.tsx  TestComponent.tsx
apps/frontend/providers/: AuthProviders.tsx  CartInitalizer.tsx  ReduxProvider.tsx
apps/frontend/utils/: cart-slice.ts  fetcher.ts  redux-selectors.ts  token.ts
apps/predict-food-demand/: main.py  pyproject.toml  restaurant_food_data.csv
apps/predict-food-demand/model/: encoder.pkl
apps/predict-food-demand/src/: __init__.py  model.py
apps/predict-food-demand/src/scripts/: run.py
docs/: google-oauth-setup.md  predict-food-demand-sever-setup.md  stripe-setup.md
(+82 files in other folders)
