[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["jaren <kaylajaren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
scikit-learn = "^1.5.1"
pydantic = "^2.8.2"
pandas = "^2.2.2"
numpy = "^2.1.0"

[tool.poetry.scripts]
dev = "src.scripts.run:dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
